# konsepy_nlp_template

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
doco/: SOCIAL_SUPPORT_DEMO.md  build_a_model.md
sample/: README.md  corpus.csv  corpus.jsonl  corpus_lined.csv
src/: config.py  create_biotag_dataset.py  get_text_snippets.py  predict_bio_dataset.py  run4snippets.py  run_all.py  run_all_matches.py  run_biotag.py  run_concept.py  train_bio_dataset.py
src/example_nlp/: shared_patterns.py
templates/: new_concept_template.py  new_concept_template_extract.py  new_concept_template_simple.py  test_concept_template.py
