[project]
name = "konsepy_nlp_template"
version = "0.3.0"
description = "Project template for running konsepy NLP."
requires-python = ">=3.10"
dependencies = [
    "konsepy>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = 'src'

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
