[project]
name = "konsepy_nlp_template"
version = "0.5.0"
description = "Project template for running konsepy NLP."
requires-python = ">=3.11"
dependencies = [
    "konsepy>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = 'src'

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
